added new request and new error function

--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
     <title>TİTLE</title>
 </head>
 
 <body class="bg-dark ">
-
-
     <div class="container">
-
         <div class="card mt-5">
             <div class="card-header text-center">currency Project</div>
             <div class="card-body">
@@ -27,31 +23,17 @@
                         <select class="form-control" id="code" placeholder="CURRENT CODE" aria-label="Default select example"></select>
                     </div>
                     <div class="col-12">
+
                         <hr>
+                        <div id="alert-area"></div>
                         <button class="btn btn-outline-success" onclick="changeCurrency()" id="calCurrecy">Convert</button>
                         <hr>
                         <input class="form-control" type="number" id="ds_input" placeholder="" disabled>
                     </div>
-
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
     <script src="js/request.js"></script>
     <script src="js/custom.js"></script>
 </body>
