added select2 library

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
                         <input class="form-control " type="number" id="kur_1" placeholder="EURO">
                     </div>
                     <div class="col-6">
-                        <select class="form-control" id="code" placeholder="CURRENT CODE" aria-label="Default select example"></select>
+                        <select style="height: 100%;" class="form-control" id="code" placeholder="CURRENT CODE" aria-label="Default select example"></select>
                     </div>
                     <div class="col-12">
 
@@ -34,8 +34,18 @@
             </div>
         </div>
     </div>
+
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="js/request.js"></script>
     <script src="js/custom.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#code").select2();
+        });
+    </script>
+
 </body>
 
 </html>
